--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $color-secondary-100: hsl(223, 100%, 88%);
 $color-secondary-600: hsl(354, 100%, 66%);
 
 // ### Neutral ####
+$color-neutral-100: hsl(0, 0%, 83%);
 $color-neutral-200: hsl(0, 0%, 59%);
 $color-neutral-800: hsl(209, 33%, 12%);
 
@@ -25,10 +26,11 @@ $color-neutral-800: hsl(209, 33%, 12%);
 // ##################
 
 // ### Font body ####
-$font-size-400: 20px;
+$font-size-400: 1rem;
+$font-size-500: 2rem;
 
 // ## Font Family ###
-$font-family-400: 'Libre Franklin', sans-serif;
+$font-family-400: 'Libre Franklin';
 
 // ## Font weight ###
 $font-weight-thin: 300;
