--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,30 +1,53 @@
 @use '../sass/abstracts/' as abs;
 
 .footer {
-  .nav-footer {
-  }
-  .nav-footer__link-box {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    border: 1px solid rgba(abs.$color-neutral-100, 0.5);
+  text-align: center;
+  background-color: aliceblue;
+  margin: 3rem auto;
 
-    position: relative;
-    border-radius: 100%;
-  }
-  .nav-footer__logo {
-    font-size: abs.$font-size-400;
-    color: abs.$color-primary-400;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .footer-nav {
+    &__links-list {
+    }
 
-    * {
+    &__list-item {
+      display: inline-block;
+      border-radius: 100%;
+      border: 2px solid rgba(abs.$color-neutral-100, 0.3);
+      transition: all 0.3s;
+
+      // using overflow to hide the overflowing anchor background
+      overflow: hidden;
+
+      // make some space without the last element
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
+
+      &:hover {
+        // make the icons bigger
+        transform: scale(1.2);
+      }
+    }
+
+    &__link {
+      padding: 0.7rem 1rem;
+      text-decoration: none;
       display: block;
+      color: abs.$color-primary-400;
+      font-size: 1.6rem;
+      transition: all 0.3s;
+
+      &:hover {
+        background-color: abs.$color-primary-400;
+        color: white;
+      }
     }
   }
-  .footer__copy-right {
-    color: abs.$color-neutral-100;
+
+  &__copyrights {
+    color: black;
+    font-size: 1.3rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+      'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 }
