--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,20 @@
-*{margin:0;padding:0}*,*::before,*::after{box-sizing:inherit}html{box-sizing:border-box;font-size:62.5%}body{font-family:"Libre Franklin",sans-serif;min-height:100vh}
+* {
+  margin: 0;
+  padding: 0
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%
+}
+
+body {
+  font-family: "Libre Franklin", sans-serif;
+  min-height: 100vh
+}
