--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -19,6 +19,7 @@ $color-secondary-600: hsl(354, 100%, 66%);
 // ### Neutral ####
 $color-neutral-100: hsl(0, 0%, 83%);
 $color-neutral-200: hsl(0, 0%, 59%);
+$color-neutral-300: hsl(0, 0%, 70%);
 $color-neutral-800: hsl(209, 33%, 12%);
 
 // ##################
