--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -1,10 +1,14 @@
 .hero {
-  width: 80%;
-  flex: 0 0 30%;
+  width: 100%;
+  flex: 0 0 40%;
+  text-align: center;
 
   &__dashboard-img {
-    width: 100%;
-    // min-width: 48rem;
+    width: 80%;
+    height: 100%;
+    min-width: 45rem;
+    // max-width: 40vw;
     object-fit: fill;
+    filter: saturate(1.5);
   }
 }
