--- a/src/App.scss
+++ b/src/App.scss
@@ -5,5 +5,10 @@
   align-items: center;
   flex-direction: column;
 
+  @media (min-width: 75em) {
+    width: 70%;
+    margin: 0 auto;
+  }
+
   // padding: 3rem;a
 }
