--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -2,8 +2,8 @@
 
 .header {
   text-align: center;
-  width: 70%;
-  margin: 5rem auto 0;
+  width: 90%;
+  margin: 3rem auto 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,14 +14,13 @@
   }
 
   &__logo-img {
-    width: 7rem;
     margin-bottom: 4rem;
   }
 
   &__title {
-    font-weight: 200;
+    font-size: 2.5rem;
     font-family: abs.$font-family-400;
-    font-size: 2.8rem;
+    font-weight: 200;
     color: abs.$color-neutral-200;
     margin-bottom: 2rem;
 
@@ -34,6 +33,7 @@
     font-family: abs.$font-family-400;
     font-size: 1.5rem;
     font-weight: 200;
+    margin-bottom: 1rem;
   }
 
   .cta-form {
@@ -44,11 +44,12 @@
     &__cta-button {
       font-family: inherit;
       display: block;
-      width: 100%;
-      height: 5rem;
+      width: 80%;
+      height: 4.75rem;
       box-shadow: 0 2rem 4rem rgba(abs.$color-primary-400, 0.15);
       border-radius: 5rem;
       letter-spacing: 1px;
+      margin: 0 auto;
 
       &[type='email']:focus {
         background-color: rgba(abs.$color-secondary-100, 0.2);
@@ -65,7 +66,7 @@
       border: 1px solid rgba(abs.$color-primary-400, 0.5);
       padding-left: 4rem;
       font-weight: 100;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
 
       &::placeholder {
         color: abs.$color-neutral-150;
@@ -93,14 +94,14 @@
     }
   }
 
-  @media (min-width: 75em) {
+  @media (min-width: 65em) {
     .cta-form {
       display: flex;
       gap: 2rem;
 
       &__cta-button {
         flex: 0 0 25%;
-        font-size: 1.25rem;
+        // font-size: 1.25rem;
       }
     }
   }
